fixed wraps and margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,8 +264,8 @@ h6 {
 }
 
 .member-items .item {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding-bottom: 30px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -397,12 +397,22 @@ h6 {
   width: 370px;
 }
 
+/* .text-wrap {
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+} */
+
 .examples-items .item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
 
 .examples-items .item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
+}
+
+.image {
+  display: block;
+  line-height: 0;
 }
 
 .examples-items .heading {
